Update bug-bounty-essentials.md